// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when is not selected and not compact 1`] = `
<button
  className="src-components-dropdown-menu-item__menu-item"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="menuitem"
  tabIndex="-1"
  type="button"
>
  a
</button>
`;

exports[`should render correctly when is selected and compact 1`] = `
<button
  className="src-components-dropdown-menu-item__menu-item-compact-selected src-components-dropdown-menu-item__menu-item-compact src-components-dropdown-menu-item__menu-item src-components-dropdown-menu-item__selected"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="menuitem"
  tabIndex="-1"
  type="button"
>
  a
</button>
`;
